--- a/project_1.html
+++ b/project_1.html
@@ -3,7 +3,7 @@
   <head>
     <title>fii_fond</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href="css/application.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,100&amp;subset=latin,cyrillic">
     <!--if lt IE 9
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
@@ -13,7 +13,7 @@
   <body>
     <header class="b_layout">
       <div class="pure-g">
-        <div class="pure-u-7-24"><a href="#" class="b_logo"><img src="/images/logo.png"></a></div>
+        <div class="pure-u-7-24"><a href="#" class="b_logo"><img src="images/logo.png"></a></div>
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
@@ -28,7 +28,7 @@
     <footer>
       <div class="b_layout">© 2014. Все права защищены.</div>
     </footer>
-    <script src="/coffee/lib/jquery.min.js"></script>
-    <script src="/coffee/application.js"></script>
+    <script src="coffee/lib/jquery.min.js"></script>
+    <script src="coffee/application.js"></script>
   </body>
 </html>
