--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
   <head>
     <title>fii_fond</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href="css/application.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,100&amp;subset=latin,cyrillic">
     <!--if lt IE 9
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
@@ -13,7 +13,7 @@
   <body>
     <header class="b_layout">
       <div class="pure-g">
-        <div class="pure-u-7-24"><a href="#" class="b_logo"><img src="/images/logo.png"></a></div>
+        <div class="pure-u-7-24"><a href="#" class="b_logo"><img src="images/logo.png"></a></div>
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </header>
-    <div style="background-image: url(/images/promo_1.png)" class="b_promo m_little">
+    <div style="background-image: url(images/promo_1.png)" class="b_promo m_little">
       <div class="b_layout">
         <div class="typo_sh vam">публикации</div>
         <div class="vam_helper"></div>
@@ -42,7 +42,7 @@
       <div class="b_layout">
         <div class="pure-g">
           <div class="pure-u-1-3">
-            <div class="b_news"><a href="#" class="overlay"></a><img src="/images/news_1.png">
+            <div class="b_news"><a href="#" class="overlay"></a><img src="images/news_1.png">
               <p class="typo_t">РНФ ОПРЕДЕЛИЛ ПОБЕДИТЕЛЕЙ КОНКУРСА НА ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ</p>
               <p><small>11 декабря 2014</small></p>
               <p>Стимулирование формирования сети Венчурных партнёров для фондов посевных инвестиций с целью максимального…</p>
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="pure-u-1-3">
-            <div class="b_news"><a href="#" class="overlay"></a><img src="/images/news_2.png">
+            <div class="b_news"><a href="#" class="overlay"></a><img src="images/news_2.png">
               <p class="typo_t">ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ</p>
               <p><small>11 декабря 2014</small></p>
               <p>Стимулирование формирования сети Венчурных партнёров для фондов посевных инвестиций с целью максимального…</p>
@@ -67,7 +67,7 @@
       <div class="b_layout">
         <div class="pure-g">
           <div class="pure-u-1-3">
-            <div class="b_news"><a href="#" class="overlay"></a><img src="/images/news_1.png">
+            <div class="b_news"><a href="#" class="overlay"></a><img src="images/news_1.png">
               <p class="typo_t">РНФ ОПРЕДЕЛИЛ ПОБЕДИТЕЛЕЙ КОНКУРСА НА ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ</p>
               <p><small>11 декабря 2014</small></p>
               <p>Стимулирование формирования сети Венчурных партнёров для фондов посевных инвестиций с целью максимального…</p>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="pure-u-1-3">
-            <div class="b_news"><a href="#" class="overlay"></a><img src="/images/news_2.png">
+            <div class="b_news"><a href="#" class="overlay"></a><img src="images/news_2.png">
               <p class="typo_t">ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ</p>
               <p><small>11 декабря 2014</small></p>
               <p>Стимулирование формирования сети Венчурных партнёров для фондов посевных инвестиций с целью максимального…</p>
@@ -93,7 +93,7 @@
     <footer>
       <div class="b_layout">© 2014. Все права защищены.</div>
     </footer>
-    <script src="/coffee/lib/jquery.min.js"></script>
-    <script src="/coffee/application.js"></script>
+    <script src="coffee/lib/jquery.min.js"></script>
+    <script src="coffee/application.js"></script>
   </body>
 </html>
