MIC-242, MIC-240, MIC-239, MIC-232

--- a/contacts.html
+++ b/contacts.html
@@ -26,34 +26,27 @@
         </div>
       </div>
     </header>
-    <div style="background-image: url(images/promo_1.png)" class="b_promo m_little">
-      <div class="b_layout">
-        <div class="typo_sh vam">ПРОЕКТЫ</div>
-        <div class="vam_helper"></div>
+    <div class="b_contacts">
+      <div id="map"></div>
+      <div class="text">
+        <div class="title">КОНТАКТЫ</div>
+        <hr>
+        <p>123242, г. Москва</p>
+        <p>ул. Дружинниковская, д.30</p>
+        <p>Email: email@yourdomain.com</p>
+        <p>Тел: +8 (0) 101 0000 888</p>
+        <p>Факс: +8 (0) 800 0000 008</p>
       </div>
     </div>
-    <div class="b_layout">
-      <div class="pure-g">
-        <div class="pure-u-1-2">
-          <div style="background-image: url(images/project_1.png)" class="b_project"><a href="#" class="overlay"></a>
-            <div class="slot"><img src="images/logo_1.png" class="vam">
-              <div class="vam_helper"></div>
-            </div>
-            <div class="title">
-              <div class="typo_mh vam">КЛУБ ИНВЕСТОРОВ МОСКВЫ</div>
-              <div class="vam_helper"></div>
-            </div>
-          </div>
-        </div>
-        <div class="pure-u-1-2">
-          <div style="background-image: url(images/project_2.png)" class="b_project"><a href="#" class="overlay"></a>
-            <div class="slot"></div>
-            <div class="title">
-              <div class="typo_mh vam">профнавигационный ПРОЕКТ</div>
-              <div class="vam_helper"></div>
-            </div>
-          </div>
-        </div>
+    <ul class="b_links">
+      <li><a href="#" data-role="popup_open" data-target="#req"><i class="doc"></i>РЕКВИЗИТЫ КОМПАНИИ</a></li>
+      <li><a href="#"><i class="doc"></i>ДОГОВОР УЧАСТИЯ</a></li>
+    </ul>
+    <div id="req" data-role="popup" class="b_popup_wrapper">
+      <div data-role="popup_window" class="b_popup">
+        <p><i class="doc"></i></p>
+        <div class="title">РЕКВИЗИТЫ КОМПАНИИ</div>
+        <p>ОГРН 1127799004112,<br>ИНН 7703479598,<br>КПП770301001,<br>р/с: 40703810800000003992  в ВТБ 24 (ЗАО) г. Москва,<br>БИК: 044525716,<br>к/с: 30101810100000000716</p>
       </div>
     </div>
     <footer>
