--- a/list.html
+++ b/list.html
@@ -9,6 +9,7 @@
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     -->
+    <script src="//maps.google.com/maps/api/js?sensor=true"></script>
   </head>
   <body>
     <header class="b_layout">
@@ -17,7 +18,7 @@
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
-            <li><a href="#">Проекты</a></li>
+            <li><a href="#" class="active">Проекты</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Публикации</a></li>
             <li><a href="#">Контакты</a></li>
@@ -34,14 +35,10 @@
       <li><a href="news_page.html">Новость</a></li>
       <li><a href="publications.html">Публикации</a></li>
       <li><a href="publication.html">Публикация</a></li>
-      <!--li-->
-      <!--  a(href='.html') -->
-      <!--li-->
-      <!--  a(href='.html') -->
-      <!--li-->
-      <!--  a(href='.html') -->
-      <!--li-->
-      <!--  a(href='.html') -->
+      <li><a href="publication_1.html">Публикация 1</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+      <li><a href="about.html">О фонде</a></li>
+      <li><a href="faces.html">Лица</a></li>
       <!--li-->
       <!--  a(href='.html') -->
       <!--li-->
@@ -55,6 +52,7 @@
       <div class="b_layout">© 2014. Все права защищены.</div>
     </footer>
     <script src="coffee/lib/jquery.min.js"></script>
+    <script src="coffee/lib/gmaps.js"></script>
     <script src="coffee/application.js"></script>
   </body>
 </html>
