--- a/project_2.html
+++ b/project_2.html
@@ -9,6 +9,7 @@
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     -->
+    <script src="//maps.google.com/maps/api/js?sensor=true"></script>
   </head>
   <body>
     <header class="b_layout">
@@ -17,7 +18,7 @@
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
-            <li><a href="#">Проекты</a></li>
+            <li><a href="#" class="active">Проекты</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Публикации</a></li>
             <li><a href="#">Контакты</a></li>
@@ -25,10 +26,22 @@
         </div>
       </div>
     </header>
+    <div class="b_project_2">
+      <section class="slide_1">
+        <div class="b_layout"><a href="#" class="overlay"></a>
+          <div class="vam"><img src="images/prof_logo.png">
+            <div class="title typo_sh">Клуб инвесторов москвы</div>
+            <p>text from png</p>
+          </div>
+          <div class="vam_helper"></div>
+        </div>
+      </section>
+    </div>
     <footer>
       <div class="b_layout">© 2014. Все права защищены.</div>
     </footer>
     <script src="coffee/lib/jquery.min.js"></script>
+    <script src="coffee/lib/gmaps.js"></script>
     <script src="coffee/application.js"></script>
   </body>
 </html>
