MIC-232, MIC-233, fixes

--- a/faces_1.html
+++ b/faces_1.html
@@ -31,19 +31,13 @@
     </header>
     <div style="background-image: url(images/promo_1.png)" class="b_promo m_little">
       <div class="b_layout">
-        <div class="typo_sh vam">Президиум</div>
+        <div class="typo_sh vam">президиум и учредители фонда</div>
         <div class="vam_helper"></div>
       </div>
     </div>
-    <div class="b_main_member">
-      <div class="b_layout"><img src="images/main_member.png">
-        <div class="name">АРтемов алексей валерьевич</div>
-        <div class="role">Исполнительный директор</div>
-      </div>
-    </div>
     <div class="b_layout">
-      <div class="b_members">
-        <div class="title typo_sh">Члены президиума</div>
+      <div class="b_members m_pad">
+        <!--.title.typo_sh Члены президиума-->
         <div class="b_member">
           <div class="pure-g">
             <aside class="pure-u-6-24"><img src="images/member_1.png">
@@ -94,26 +88,29 @@
         </div>
       </div>
     </div>
-    <!--.b_layout-->
-    <!--  .b_founders-->
-    <!--    .title.typo_sh Учредители фонда-->
-    <!--    .pure-g-->
-    <!--      .pure-u-3-24-->
-    <!--      .pure-u-9-24-->
-    <!--        .b_founder-->
-    <!--          a.overlay(href='http://www.ipras.ru', target="_blank")-->
-    <!--          img(src='images/u_1.png')-->
-    <!--          .name институт психологии ран-->
-    <!--          .link www.ipras.ru-->
-    <!--          p text from png-->
-    <!--      .pure-u-9-24-->
-    <!--        .b_founder-->
-    <!--          a.overlay(href='http://www.superjob.ru', target="_blank")-->
-    <!--          img(src='images/u_2.png')-->
-    <!--          .name Суперджоб-->
-    <!--          .link www.superjob.ru-->
-    <!--          p text from png-->
-    <!--      .pure-u-3-24-->
+    <div class="b_layout">
+      <div class="b_founders">
+        <div class="title typo_sh">Учредители фонда</div>
+        <div class="pure-g">
+          <div class="pure-u-3-24"></div>
+          <div class="pure-u-9-24">
+            <div class="b_founder"><a href="http://www.ipras.ru" target="_blank" class="overlay"></a><img src="images/u_1.png">
+              <div class="name">институт психологии ран</div>
+              <div class="link">www.ipras.ru</div>
+              <p>text from png</p>
+            </div>
+          </div>
+          <div class="pure-u-9-24">
+            <div class="b_founder"><a href="http://www.superjob.ru" target="_blank" class="overlay"></a><img src="images/u_2.png">
+              <div class="name">Суперджоб</div>
+              <div class="link">www.superjob.ru</div>
+              <p>text from png</p>
+            </div>
+          </div>
+          <div class="pure-u-3-24"></div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="b_layout">© 2014. Все права защищены.</div>
     </footer>
