--- a/project_1.html
+++ b/project_1.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/application.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,100&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300&amp;subset=latin,cyrillic">
     <!--if lt IE 9
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
@@ -18,9 +19,11 @@
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
-            <li><a href="#" class="active">Проекты</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="#" class="active">Президиум</a></li>
+            <li><a href="#">Попечительский совет</a></li>
+            <li><a href="#">Проекты</a></li>
             <li><a href="#">Публикации</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </div>
@@ -31,7 +34,7 @@
         <div class="b_layout"><a href="#" class="overlay"></a>
           <div class="vam"><img src="images/prof_logo.png">
             <div class="title typo_sh">Профориентационный проект</div>
-            <p>text from png</p>
+            <p>Фонд «Интеллектуальные инвестиции» и Департамент образования города Москвы (ДОгМ) проводят мероприятия по профорнавигации школьников уже в тесчение нескольких лет. Куратором и организатором большей части мероприятий от московской системы среднего образования выступает ГБУ «Городской центр профессионального и карьерного развития» (ГЦПиКР). </p>
           </div>
           <div class="vam_helper"></div>
         </div>
@@ -40,9 +43,9 @@
         <div class="b_layout">
           <div class="vam w100">
             <div class="title typo_sh">партнёры</div>
-            <p>text from png</p>
+            <p>В качестве партнёров в проекте участвуют кадровые фирмы, представители ведущих работодателей Москвы, высшие учебные заведения столицы, другие образовательные организации.<br />Недавно к проекту подключился Департамент науки, промышленной политики и предпринимательства Правительства Москвы.</p>
             <div class="title typo_sh">информация о проекте</div>
-            <p>text from png</p>
+            <p>В качестве движущей силы и организационного ресурса используется уникальная система наставничества «студент – школьник». Студенты, именные стипендиаты Правительства Москвы, под руководством кураторов из Городского центра профессионального и карьерного развития становятся HR-наставниками школьников. Помогают ребятам сориентироваться в многообразии рынка труда, в разнообразии профессий и выбрать «свое, подходящее» среди безграничных возможностей большого города. Для этого в течение учебного года старшеклассники выполняют массу увлекательных заданий и участвуют в мероприятиях различных видов деятельности, направленных на построение индивидуальной образовательной и карьерной траектории школьника.</p>
           </div>
           <div class="vam_helper"></div>
         </div>
@@ -51,7 +54,7 @@
         <div class="b_layout">
           <div class="vam">
             <div class="title typo_sh">мероприятия</div>
-            <p>text from png</p>
+            <p>Ученик принимает участие в мероприятиях. Согласно его интересам и предпочтениям формируются цели, к которым он может двигаться. Помимо информации об интересах, мероприятия дают понимание об уровне подготовки ученика в той или иной области.</p>
           </div>
           <div class="vam_helper"></div><img src="http://placehold.it/600x560">
         </div>
@@ -60,7 +63,7 @@
         <div class="b_layout">
           <div class="vam">
             <div class="title typo_sh">цели</div>
-            <p>text from png</p>
+            <p>Ученик ставит собственные цели и видит возможные пути их достижения. Это помогает ученику яснее представить свой профессиональный путь и понять, чем ему действительно хотелось бы заниматься.</p>
           </div>
           <div class="vam_helper"></div><img src="http://placehold.it/600x560">
         </div>
@@ -69,7 +72,7 @@
         <div class="b_layout">
           <div class="vam">
             <div class="title typo_sh">статистика</div>
-            <p>text from png</p>
+            <p>По результатам участия в мероприятиях и прохождения тестов, ученик видит личную статистику и соотносит ее со своими целями. Таким образом, он может корректировать путь дальнейшего движения.</p>
           </div>
           <div class="vam_helper"></div><img src="http://placehold.it/600x560">
         </div>
@@ -78,7 +81,7 @@
         <div class="b_layout">
           <div class="vam">
             <div class="title typo_sh">организации</div>
-            <p>text from png</p>
+            <p>Различные организации и компании представляют информацию о себе внутри системы. Ученик может искать и выбирать ту, в которой ему хотелось бы работать.</p>
           </div>
           <div class="vam_helper"></div><img src="http://placehold.it/600x560">
         </div>
@@ -86,8 +89,8 @@
       <section class="slide_4">
         <div class="b_layout">
           <div class="vam">
-            <div class="title typo_sh">организации</div>
-            <p>text from png</p>
+            <div class="title typo_sh">Подготовка профессионалов</div>
+            <p>Цель проекта — выявление у учеников стремления, желания и возможностей развития в сторону той или иной специальности. Подготовка учеников курируется специалистами в соответствии с индивидуальными особенностями и потребностями каждого. Проект дает возможность появления новых подготовленных кадров, хорошо знающих свое дело, с радостью выполняющих свою работу и движимых идеей.</p>
             <p class="center"> <a href="#" class="button">Посмотреть проект</a></p>
           </div>
           <div class="vam_helper"></div><img src="http://placehold.it/1250x445">
