--- a/project_2.html
+++ b/project_2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/application.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,100&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300&amp;subset=latin,cyrillic">
     <!--if lt IE 9
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
@@ -18,9 +19,11 @@
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
-            <li><a href="#" class="active">Проекты</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="#" class="active">Президиум</a></li>
+            <li><a href="#">Попечительский совет</a></li>
+            <li><a href="#">Проекты</a></li>
             <li><a href="#">Публикации</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </div>
@@ -31,7 +34,65 @@
         <div class="b_layout"><a href="#" class="overlay"></a>
           <div class="vam"><img src="images/prof_logo.png">
             <div class="title typo_sh">Клуб инвесторов москвы</div>
-            <p>text from png</p>
+            <p>Клуб инвесторов Москвы – постоянно действующее объединение, без образования юридического лица, целью деятельности которого является обеспечение конструктивного диалога, формирование атмосферы доверия и эффективное взаимодействие между органами государственной власти города Москвы и представителями бизнес-сообщества города Москвы в сфере градостроительной и имущественно-земельной политики.</p>
+          </div>
+          <div class="vam_helper"></div>
+        </div>
+      </section>
+      <section class="slide_5">
+        <div class="b_layout">
+          <div class="text">
+            <div class="title typo_sh">ИНформация о клубе</div>
+            <p>Статус создаваемого объединения как консультативной и совещательной площадки профессионального сообщества инвесторов и органами власти. Финансирование деятельности Клуба осуществляется за счет собственных средств узкого круга инвесторов. </p>
+          </div>
+          <div class="steps">
+            <div class="pure-g">
+              <div class="pure-u-10-24">
+                <div style="margin-top: 150px;" class="step">
+                  <div class="label">шаг <em>2</em></div>
+                  <p>Оценка системности выявленных проблем, причин их возникновения</p>
+                </div>
+                <div style="margin-top: 180px;" class="step">
+                  <div class="label">шаг <em>4</em></div>
+                  <p>Оценка перспектив инвестиционной деятельности исходя из развития нормативно-правовой базы</p>
+                </div>
+              </div>
+              <div class="pure-u-4-24"><i style="margin-top: 0px;" class="round"></i><i style="margin-top: 160px;" class="round"></i><i style="margin-top: 130px;" class="round"></i><i style="margin-top: 150px;" class="round"></i><i style="margin-top: 170px;" class="round"></i></div>
+              <div class="pure-u-10-24">
+                <div class="step">
+                  <div class="label">шаг <em>1</em></div>
+                  <p>Выявление и обобщение информации о проблемах осуществления инвестиционной деятельности (в том числе, проблем взаимодействия инвесторов с уполномоченными органами исполнительной власти города Москвы в сфере имущественно-земельных отношений и градостроительной деятельности)</p>
+                </div>
+                <div style="margin-top: 100px;" class="step">
+                  <div class="label">шаг <em>3</em></div>
+                  <p>Выработка согласованных членами Клуба вариантов решений выявленных проблем на основе экспертных заключений и юридического анализа</p>
+                </div>
+                <div style="margin-top: 200px;" class="step">
+                  <div class="label">шаг <em>5</em></div>
+                  <p>Доведение до сведения Мэра Москвы и заместителей Мэра Москвы в Правительстве Москвы по вопросам градостроительной политики и строительства, имущественно-земельных отношений, выработанных по результатам проведенной работы предложений</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="slide_6">
+        <div class="b_layout">
+          <div class="vam">
+            <div class="title typo_sh">Участие в клубе</div>
+            <p>Участие в деятельности Клуба может принять любой инвестор для чего, инвестор обращается в аппарат Клуба с предложением актуальной темы, затрагивающей права и интересы широкого круга лиц. После подтверждения аналитической группой Клуба актуальности проблемы, она выносится на широкое обсуждение и при необходимости формируется рабочая группа с привлечением представителей инвестора предложившего данную тему к обсуждению (по желанию). </p>
+          </div>
+          <div class="vam_helper"></div>
+        </div>
+      </section>
+      <section class="slide_7">
+        <div class="b_layout">
+          <div class="vam">
+            <div class="title typo_sh">Дополнительная информация</div>
+            <p>Для обсуждения значимых вопросов по основным направлениям деятельности Клуба приглашаются представители широкого круга инвесторов, принимающих участие в деятельности Клуба, и представители органов власти города Москвы.</p>
+            <p>Для проработки отдельных, требующих экспертной оценки вопросов, по выявленным проблемам в рамках деятельности Клуба образуются постоянные или временные рабочие группы.</p>
+            <p>Для финансирования расходов на изготовление презентационных и иных материалов по вопросам деятельности Клуба, подготовку экспертных заключений, аналитических и юридических справок может привлекаться широкий круг инвесторов, принимающих участие в деятельности Клуба.</p>
+            <p class="center"> <a href="#" class="button">Посмотреть проект</a></p>
           </div>
           <div class="vam_helper"></div>
         </div>
