--- a/list.html
+++ b/list.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/application.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,100&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300&amp;subset=latin,cyrillic">
     <!--if lt IE 9
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
@@ -18,9 +19,11 @@
         <div class="pure-u-17-24">
           <ul class="b_main_menu">
             <li><a href="#">О фонде</a></li>
-            <li><a href="#" class="active">Проекты</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="#" class="active">Президиум</a></li>
+            <li><a href="#">Попечительский совет</a></li>
+            <li><a href="#">Проекты</a></li>
             <li><a href="#">Публикации</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </div>
@@ -39,6 +42,7 @@
       <li><a href="contacts.html">Контакты</a></li>
       <li><a href="about.html">О фонде</a></li>
       <li><a href="faces.html">Лица</a></li>
+      <li><a href="faces_1.html">Лица 1</a></li>
       <!--li-->
       <!--  a(href='.html') -->
       <!--li-->
