--- a/news_page.html
+++ b/news_page.html
@@ -54,7 +54,8 @@
           <aside class="pure-u-6-24">
             <div class="title">Категории</div>
             <ul>
-              <li><a href="#">> Все новости</a></li>
+              <li><a href="#">> Все</a></li>
+              <li><a href="#">> Новости</a></li>
               <li><a href="#">> Тендеры</a></li>
               <li><a href="#">> Отчёты о мероприятиях</a></li>
             </ul>
